Bug fix with fetching results

--- a/src/index.html
+++ b/src/index.html
@@ -11,6 +11,6 @@
     <body>
     <div id="app">
     </div>
-
+    <footer class="text-center credits-footer">Built by Rahul Yedida</footer>
     </body>
 </html>
